# octo-pytorch

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  test.py
scripts/: check_weights_conversion.py  convert_weights.py  eval.py  finetune.py  finetune_new_observation_action.py  push_to_hub.py
src/octo_pytorch/model/: __init__.py  configuration_octo.py  modeling_octo.py  octo_model.py
src/octo_pytorch/model/components/: action_heads.py  base.py  block_transformer.py  diffusion.py  film_conditioning_layer.py  image_encoders.py  image_tokenizer.py  tokenizers.py  transformer.py
src/octo_pytorch/policy/: policy.py
src/octo_pytorch/utils/: gym_wrappers.py  normalization.py  text_processing.py
tests/: test_diffusion_loss.py
